# ralph-skill

./: .flake8  .gitignore  CONTRIBUTING.md  INSTALL_GUIDE.md  QUICKSTART.md  README.md  TESTING_GUIDE.md  USAGE_GUIDE.md  config.example.json  config.example.yaml  config.yaml  test_autonomous.py  test_autonomous_develop.py  test_ralph_skill.py  test_skill_logic.py
ralph-skill/: .editorconfig  KIRO_USAGE.md  Makefile  README.md  SKILL.md  config.yaml  pyproject.toml  ralph_cli.py
ralph-skill/.kiro/specs/ralph-autonomous-engine/: .config.kiro  design.md  requirements.md
ralph-skill/.kiro/steering/: Explicit_Architecture.md  api-response-format.md  cleanup-and-docs.md
ralph-skill/docs/: CHANGELOG.md  agent_driven_execution.md  e2e_testing_support.md  frontend-support.md  kiro_agent_integration.md
ralph-skill/examples/: agent_driven_example.py  ai_engine_adapter_example.py  context_manager_demo.py  docker_example.py  hook_system_demo.py
ralph-skill/src/ralph/: __init__.py  __main__.py
ralph-skill/src/ralph/adapters/: __init__.py  ai_engine.py  aider_adapter.py  claude_adapter.py  qwen_code_adapter.py
ralph-skill/src/ralph/core/: config_parser.py  ralph_engine.py
ralph-skill/src/ralph/managers/: acp_docker_client.py  acp_security_manager.py  budget_enforcer.py  cli_process_manager.py  context_manager.py  event_stream_manager.py  git_manager.py  migration_runner.py  module_analyzer.py  postgresql_client.py  redis_client.py  task_planner.py  test_database_manager.py  timeout_controller.py
ralph-skill/src/ralph/models/: __init__.py  acp.py  config.py  database.py  docker.py  enums.py  frontend.py  hook.py  task.py
ralph-skill/src/ralph/sandbox/: safety_sandbox.py
ralph-skill/src/ralph/support/: __init__.py  docker_error_parser.py  (+9 more)
ralph-skill/tests/: test_backend_support.py  test_database_manager.py  test_project_structure.py
ralph-skill/tests/integration/: README_ACP_TESTS.md
ralph-skill/tests/support/: test_docker_error_parser.py  test_frontend_support.py  test_frontend_vitest_integration.py  test_playwright_manager.py  test_vitest_manager.py
ralph-skill/tests/test_adapters/: test_ai_engine.py
(+68 files in other folders)
